tests/cases/compiler/contextualTyping4/index.ts
class foo { public bar:{id:number;} = {id:5, name:"foo"}; }
//~^ ERROR: Object literal may only specify known properties, and 'name' does not exist.
